--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 (x) Camera fix
 (x) Space fix
 ( ) Shading
-( )  > Texture
+(x)  > Texture
 ( )  > Frame buffer
 ( )  > Transperancy
 ( )  > Refraction
